# llm-organic-company-history

./: .gitignore  README.md  TODO.md  pyproject.toml
src/organic_company_history/: basis.py  database.py  hiring.py  main.py  polars_llm.py
